# olio

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  build.rs  lock-minimize.sh
.github/workflows/: ci.yml
benches/: gather.rs  gathering.rs  pread.rs
src/: lib.rs
src/fs/: pos_read.rs  read.rs
src/fs/rc/: read.rs
src/io/: gather.rs
src/mem/: handle.rs
