[package]
name          = "olio"
version       = "1.4.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Miscellaneous I/O utilities"
documentation = "https://docs.rs/olio"
repository    = "https://github.com/dekellum/olio"
readme        = "README.md"
keywords      = ["file", "fs", "io"]
categories    = ["filesystem"]
exclude       = [".gitignore", ".travis.yml", "appveyor.yml"]
build         = "build.rs"

[dependencies]
memmap     = { version=">=0.7.0, <0.8", optional=true }
libc       = { version=">=0.2.42, <0.3" }

[dev-dependencies]
bytes      = { version=">=0.4.6, <0.6" }
tempfile   = { version=">=3.1.0, <3.2" }
rand       = { version=">=0.7.0, <0.8" }

[features]
default = ["mmap"]
mmap = ["memmap"]

[lib]
doctest = true
