[package]
name          = "olio"
version       = "1.4.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Miscellaneous I/O utilities"
documentation = "https://docs.rs/olio"
repository    = "https://github.com/dekellum/olio"
readme        = "README.md"
keywords      = ["file", "fs", "io"]
categories    = ["filesystem"]
exclude       = [".gitignore", ".travis.yml", "appveyor.yml"]
build         = "build.rs"

[dependencies]
memmap     = { version=">=0.7.0, <0.8", optional=true }
libc       = { version=">=0.2.42, <0.3" }

[dev-dependencies]
bytes      = { version=">=1.0.1, <1.1" }
tempfile   = { version=">=3.1.0, <3.3" }
rand       = { version=">=0.8.0, <0.9" }

# A tempfile dependency, max transitive for MSRV 1.39.0
# https://github.com/Stebalien/tempfile/issues/120
remove_dir_all      = { version=">=0.5.0, <0.5.3", default-features=false }


[features]
default = ["mmap"]
mmap = ["memmap"]

[lib]
doctest = true
